--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -4,7 +4,10 @@ import { Image } from "astro:assets";
 import { twMerge } from "tailwind-merge";
 ---
 
-<section class="px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-4/5">
+<section
+  id="services"
+  class="px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-4/5"
+>
   <h2 class="text-4xl font-bold text-start mb-3">
     💼 Servicios que impulsan tu presencia online
   </h2>
