--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,9 +19,9 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
     data-aos="fade-up"
   />
   <h1 class="text-5xl prose font-bold mb-6 tablet:text-7xl desktop:text-7xl">
-    Hola, soy <span class="text-blue-500">Alexis Chim</span><br />
+    Hola, soy <span class="text-alx-900">Alexis Chim</span><br />
   </h1>
-  <p class="text-base text-black mb-6 tablet:text-xl desktop:max-w-[60%]">
+  <p class="text-base text-black mb-6 tablet:text-xl desktop:max-w-[50%]">
     Me enfoco en desarrollar interfaces web que <strong
       >transforman ideas</strong
     > en experiencias atractivas y accesibles, siempre pensando en el usuario, el
@@ -33,13 +33,13 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
   >
     <a
       href="#projects"
-      class="bg-blue-500 text-white w-full px-2 py-4 rounded-[.5rem] hover:bg-blue-600 transition"
+      class="bg-alx-900 text-white w-full font-semibold px-2 py-4 rounded-[.5rem] hover:bg-alx-600 transition"
     >
       🚀 Mira lo que puedo construir
     </a>
     <a
       href="#services"
-      class="bg-blue-50 text-[#005bab] w-full px-2 py-4 rounded-[.5rem] hover:bg-blue-100 transition"
+      class="bg-alx-100 text-black w-full font-semibold px-2 py-4 rounded-[.5rem] hover:bg-alx-300 transition"
     >
       💡 Mira mis soluciones digitales
     </a>
