--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,19 @@
 
 @theme {
   /* Colores principales */
+  --color-alx-50: #e8f1ff;
+  --color-alx-100: #d5e5ff;
+  --color-alx-200: #b3ceff;
+  --color-alx-300: #85acff;
+  --color-alx-400: #567bff;
+  --color-alx-500: #2f4bff;
+  --color-alx-600: #0c16ff;
+  --color-alx-700: #0008ff;
+  --color-alx-800: #060fcd;
+  --color-alx-900: #101a9f;
+  --color-alx-950: #0a0e5c;
+
+  /* Colores secundarios */
   --color-background: #F8F8F8;
   --color-text: #1C1C1E;
   --color-gray-muted: #5C5C5C;
@@ -27,4 +40,14 @@
 
   /* Pantallas grandes (1536px) */
   --breakpoint-fullhd: 96rem;
+}
+
+.glassCardProject {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.07);
+  border-radius: 16px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.3px);
+  -webkit-backdrop-filter: blur(6.3px);
+  border: 1px solid rgba(255, 255, 255, 0.04);
 }
