--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import Carousel from "./Carousel.astro";
 import CardProject from "./CardProject.astro";
 ---
 
-<section id="projects" class="bg-[#f5f5f7] pt-10 pb-4">
+<section id="projects" class="min-h-screen snap-start bg-white pt-10 pb-4">
   <header class="px-4 mx-auto max-w-[90%] laptop:max-w-4/5">
     <h2 class="text-4xl font-bold text-start mb-3">
       ⌨️ Mi vitrina de desarrollos
