--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,9 @@
     <title>Alexis Chim: Web Developer</title>
   </head>
   <body>
-    <slot />
+    <main class="scroll-smooth relative">
+      <slot />
+    </main>
   </body>
 </html>
 
