--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,7 +6,7 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-4/5"
+  class="min-h-screen snap-start px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-4/5"
 >
   <h2 class="text-4xl font-bold text-start mb-3">
     💼 Servicios que impulsan tu presencia online
@@ -58,7 +58,7 @@ import { twMerge } from "tailwind-merge";
   </div>
 </section>
 
-<section class="px-6 py-12 bg-gray-50">
+<!-- <section class="px-6 py-12 bg-gray-50">
   <h2 class="text-2xl font-bold mb-8 text-center">
     ¿Listo para llevar tu proyecto al siguiente nivel?
   </h2>
@@ -70,4 +70,4 @@ import { twMerge } from "tailwind-merge";
       🚀 ¡Hablemos!
     </a>
   </div>
-</section>
+</section> -->
