--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,12 +6,12 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="min-h-screen snap-start px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-4/5"
+  class="min-h-screen snap-start px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
 >
   <h2 class="text-4xl font-bold text-start mb-3">
-    💼 Servicios que impulsan tu presencia online
+    Servicios que impulsan tu presencia online
   </h2>
-  <p class="mb-8 text-gray-600 prose-sm">
+  <p class="mb-8 text-gray-600 text-start prose-sm">
     Diseño y desarrollo web a medida para que tu presencia digital no solo se
     vea bien, sino que funcione y conecte.
   </p>
