--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("/fonts/Roboto-VariableFont_wdth\,wght.woff2") format("woff2"),
+    url("/fonts/Roboto-VariableFont_wdth\,wght.woff") format("woff"),
+    url("/fonts/Roboto-VariableFont_wdth\,wght.ttf") format("truetype");
+  font-display: swap;
+}
+
 @theme {
   /* Colores principales */
   --color-alx-50: #e8f1ff;
@@ -42,12 +52,14 @@
   --breakpoint-fullhd: 96rem;
 }
 
-.glassCardProject {
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.07);
-  border-radius: 16px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.3px);
-  -webkit-backdrop-filter: blur(6.3px);
-  border: 1px solid rgba(255, 255, 255, 0.04);
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Roboto", "Segoe UI", Geneva, Verdana, sans-serif,
+    Courier;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
 }
