--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,14 +6,15 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="min-h-screen snap-start px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
+  class="min-h-screen px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
 >
   <h2 class="text-4xl font-bold text-start mb-3">
-    Servicios que impulsan tu presencia online
+    Soluciones digitales hechas para destacar
   </h2>
   <p class="mb-8 text-gray-600 text-start prose-sm">
-    Diseño y desarrollo web a medida para que tu presencia digital no solo se
-    vea bien, sino que funcione y conecte.
+    Impulso tu negocio con soluciones digitales personalizadas, diseñadas para
+    ofrecer rendimiento, usabilidad y un impacto visual que realmente diferencia
+    tu marca.
   </p>
 
   <div class="grid grid-cols-12 gap-4">
