--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import "@styles/global.css";
 import Layout from "@layouts/Layout.astro";
-import Welcome from "../components/Welcome.astro";
 import Hero from "@components/Hero.astro";
 import About from "@components/About.astro";
+import AutomaticCarouselFade from "@components/AutomaticCarouselFade.astro";
 import Services from "@components/Services.astro";
 import Projects from "@components/Projects.astro";
 import Contact from "@components/Contact.astro";
@@ -13,6 +13,7 @@ import Footer from "@components/Footer.astro";
 <Layout>
   <Hero />
   <About />
+  <AutomaticCarouselFade />
   <Services />
   <Projects />
   <Contact />
