--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,14 +8,16 @@ import Services from "@components/Services.astro";
 import Projects from "@components/Projects.astro";
 import Contact from "@components/Contact.astro";
 import Footer from "@components/Footer.astro";
+import BannerFacebook from "@components/BannerFacebook.astro";
 ---
 
 <Layout>
   <Hero />
   <About />
   <AutomaticCarouselFade />
-  <Services />
   <Projects />
+  <Services />
+  <BannerFacebook />
   <Contact />
   <Footer />
 </Layout>
