--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,10 +4,10 @@ import Carousel from "./Carousel.astro";
 import CardProject from "./CardProject.astro";
 ---
 
-<section id="projects" class="min-h-screen snap-start bg-white pt-10 pb-4">
+<section id="projects" class="min-h-screen snap-start pt-10 pb-4">
   <header class="px-4 mx-auto max-w-[90%] laptop:max-w-[85%]">
     <h2 class="text-4xl font-bold text-start mb-3">Zona de commits visuales</h2>
-    <p class="mb-8 text-gray-600 prose-sm">
+    <p class="mb-4 text-gray-600 prose-sm">
       Este espacio reúne mis proyectos más sólidos, pensados para destacar en
       diseño, funcionalidad y eficiencia.
     </p>
